# monolith

./: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  mkimage.sh  monolith_gdb.py  qemu.sh
buildroot/boot/: limine.conf
buildroot/etc/: passwd
buildroot/usr/include/: limine.h  string.h  syscall.h  syscall.hpp
init/: CMakeLists.txt  main.c  main.cpp
kernel/: CMakeLists.txt  elf.cpp  init.cpp  initramfs.cpp  klog.cpp  kstd.cpp  panic.cpp  stackchk.cpp
kernel/arch/x86_64/: acpi.cpp  acpi.hpp  apic.cpp  apic.hpp  arch.S  boot.cpp  context.S  context.cpp  context.hpp  cpu.cpp  cpu.hpp  gdt.cpp  gdt.hpp  interrupts.cpp  interrupts.hpp  io.hpp  ioapic.cpp  isr_stubs.S  lapic.cpp  linker.ld  mmu.cpp  mmu.hpp  pic.hpp  pit.cpp  serial.cpp  serial.hpp  smp.cpp  smp.hpp  smpboot.S  timer.cpp  timer.hpp
kernel/dev/: block.cpp  block.hpp  character.cpp  character.hpp  console.cpp  device.hpp  efifb.cpp  efifb.hpp  efifb_font.cpp  pci_class.hpp  pcie.cpp  pcie.hpp  ps2.cpp  ps2.hpp  pseudo.cpp  pseudo.hpp  rtc.cpp  rtc.hpp  tty.cpp  tty.hpp
kernel/dev/block/: block.cpp  block.hpp  disk.cpp  disk.hpp  partition.cpp  partition.hpp
kernel/dev/net/e1000/: e1000.cpp
kernel/dev/nvme/: nvme.cpp  nvme.hpp  nvme_structs.hpp
kernel/fs/: filesystem.cpp  filesystem.hpp  generic.cpp  generic.hpp  lookup.cpp  lookup.hpp  ops.hpp  ramfs.cpp  ramfs.hpp  super.cpp  ventry.cpp  ventry.hpp  vfs.cpp  vfs.hpp  vnode.cpp  vnode.hpp
kernel/fs/fat/: fatfs.cpp
kernel/fs/procfs/: procfs.cpp  procfs.hpp
kernel/fs/ramfs/: ramfs.cpp  ramfs.hpp
kernel/include/: config.hpp  container_of.hpp  elf.hpp  init.hpp  initramfs.hpp  kfmt.hpp  klog.hpp  kstd.hpp  list.hpp  panic.hpp  types.hpp
kernel/include/arch/: generic.hpp
kernel/include/arch/x86_64/: acpi.hpp  apic.hpp  arch.hpp  config.hpp  context.hpp  cpu.hpp  gdt.hpp  interrupts.hpp  io.hpp  ioapic.hpp  lapic.hpp  mmu.hpp  pic.hpp  pit.hpp  serial.hpp  smp.hpp  timer.hpp
kernel/include/dev/: character.hpp  device.hpp  efifb.hpp  pci_class.hpp  pcie.hpp  ps2.hpp  rtc.hpp  tty.hpp
kernel/include/dev/block/: block.hpp  disk.hpp  partition.hpp
kernel/include/dev/net/e1000/: e1000.hpp  e1000_regs.hpp
kernel/include/dev/nvme/: nvme_structs.hpp
kernel/include/fs/: filesystem.hpp  generic.hpp  ops.hpp  super.hpp  ventry.hpp  vfs.hpp  vnode.hpp
kernel/include/fs/fat/: fatfs.hpp
kernel/include/fs/procfs/: procfs.hpp
kernel/include/fs/ramfs/: ramfs.hpp
kernel/include/mm/: address_space.hpp  layout.hpp  memory_map.hpp  mmu.hpp  pmm.hpp  slab.hpp  vm_object.hpp  vm_space.hpp  vmm.hpp
kernel/include/net/: arp.hpp  ether.hpp  netdev.hpp  socket.hpp
kernel/include/net/ipv4/: ipv4.hpp  raw.hpp  route.hpp  udp.hpp
kernel/include/sys/: cred.hpp  elf_exec.hpp  err.hpp  exec.hpp  executable.hpp  kworker.hpp  mutex.hpp  reflock.hpp  scheduler.hpp  signal.hpp  smp.hpp  spinlock.hpp  stat.hpp  syscall.hpp  task.hpp  thread.hpp  time.hpp  timer.hpp  waitqueue.hpp
kernel/init/: init.cpp  initramfs.cpp  initramfs.hpp
kernel/lib/: elf.cpp  elf.hpp  kfmt.hpp  klog.cpp  klog.hpp  kstd.cpp  kstd.hpp  stackchk.cpp  types.hpp
kernel/mm/: address_space.cpp  address_space.hpp  layout.hpp  memory_map.cpp  memory_map.hpp  pmm.cpp  pmm.hpp  slab.cpp  slab.hpp  vm_object.hpp  vmm.cpp  vmm.hpp
kernel/net/: arp.cpp  ether.cpp  netdev.cpp  socket.cpp
kernel/net/ipv4/: ipv4.cpp  raw.cpp  route.cpp  udp.cpp
kernel/sys/: cred.hpp  err.hpp  executable.cpp  executable.hpp  mutex.cpp  mutex.hpp  process.cpp  process.hpp  reflock.hpp  scheduler.cpp  scheduler.hpp  signal.cpp  spinlock.hpp  stat.hpp  syscall.cpp  syscall.hpp  task.cpp  thread.cpp  thread.hpp  time.cpp  time.hpp  timer.cpp  waitqueue.cpp
kernel/sys/binfmt/: elf.cpp  exec.cpp
libc/: CMakeLists.txt  monolith_cross.txt
libc/include/: assert.h  ctype.h  errno.h  fcntl.h  signal.h  stat.hpp  stdio.h  stdlib.h  string.h  syscall.h  termios.h  time.h  unistd.h
libc/include/arpa/: inet.h
libc/include/net/: route.h
libc/include/sys/: framebuffer.h  ioctl.h  mman.h  mount.h  socket.h  stat.h  syscall.h  types.h  wait.h
libc/runtime/: CMakeLists.txt  crt0.S
libc/src/: CMakeLists.txt  assert.c  ctype.c  exit.c  getopt.c  inet.c  malloc.c  printf.c  stdio.c  stdlib.c  string.c  termios.c  unistd.c
userspace/: CMakeLists.txt
userspace/cat/: CMakeLists.txt  main.c
userspace/getty/: CMakeLists.txt  main.c
userspace/init/: CMakeLists.txt  main.c
userspace/login/: CMakeLists.txt  main.c
userspace/ls/: CMakeLists.txt  main.c
userspace/mkdir/: CMakeLists.txt  main.c
userspace/mount/: CMakeLists.txt  main.c
userspace/pwd/: CMakeLists.txt  main.c
userspace/shell/: CMakeLists.txt  main.c  main.cpp
userspace/stat/: CMakeLists.txt  main.c
userspace/tee/: CMakeLists.txt  main.c
userspace/touch/: CMakeLists.txt  main.c
