set(USERSPACE_COMPILE_OPTIONS -target x86_64-none-elf -ffreestanding -msse2 -nostdlib --sysroot=${CMAKE_SOURCE_DIR}/buildroot)
set(USERSPACE_LINK_OPTIONS -fuse-ld=lld -no-pie -nostdlib --sysroot=${CMAKE_SOURCE_DIR}/buildroot)
set(USERSPACE_LINK_LIBRARIES crt0 c)

add_subdirectory("cat")
add_subdirectory("getty")
add_subdirectory("init")
add_subdirectory("login")
add_subdirectory("ls")
add_subdirectory("mkdir")
add_subdirectory("mount")
add_subdirectory("pwd")
add_subdirectory("shell")
add_subdirectory("stat")
add_subdirectory("touch")
add_subdirectory("tee")

